--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # downloadables
-DistantHorizons.sqlite
+public/download/DistantHorizons.sqlite
 
 # OS / editor junk
 .DS_Store
