--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-# dependencies
 node_modules/
-
-# environment files
 .env
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# downloadables
+*.log
 public/download/
-
-# OS / editor junk
+.metadata/
+users.json
 .DS_Store
