--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tiny-static-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "\"# Minecraft-Server-Website\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,16 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Joelstade/Minecraft-Server-Website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Joelstade/Minecraft-Server-Website/issues"
+  },
+  "homepage": "https://github.com/Joelstade/Minecraft-Server-Website#readme"
 }
