--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
+    "express-rate-limit": "^8.1.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6"
@@ -27,5 +27,6 @@
   "bugs": {
     "url": "https://github.com/Joelstade/Minecraft-Server-Website/issues"
   },
-  "homepage": "https://github.com/Joelstade/Minecraft-Server-Website#readme"
+  "homepage": "https://github.com/Joelstade/Minecraft-Server-Website#readme",
+  "type": "commonjs"
 }
