--- a/.github/workflows/docker-autobuild.yml
+++ b/.github/workflows/docker-autobuild.yml
@@ -1,43 +1,21 @@
-name: Build and Deploy Docker Image
+- name: Build Docker image
+  run: |
+    docker build -t Minecraft-Server-Website:latest .
 
-on:
-  push:
-    branches:
-      - main
+- name: Push Docker image
+  run: |
+    docker tag Minecraft-Server-Website:latest ${{ secrets.DOCKER_USERNAME }}/Minecraft-Server-Website:latest
+    docker push ${{ secrets.DOCKER_USERNAME }}/Minecraft-Server-Website:latest
 
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Docker login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: |
-          docker build -t my-node-app:latest .
-
-      - name: Push Docker image
-        run: |
-          docker tag my-node-app:latest ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:latest
-
-      # Deploy: run start.sh on your server
-      - name: Deploy via SSH
-        if: ${{ secrets.DEPLOY_SERVER_IP != '' }}
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.DEPLOY_SERVER_IP }}
-          username: ${{ secrets.DEPLOY_SERVER_USER }}
-          key: ${{ secrets.DEPLOY_SERVER_SSH_KEY }}
-          script: |
-            cd ~/my-node-app    # wherever your repo lives on the server
-            git pull origin main
-            chmod +x start.sh
-            ./start.sh
+- name: Deploy via SSH
+  if: ${{ secrets.DEPLOY_SERVER_IP != '' }}
+  uses: appleboy/ssh-action@v0.1.7
+  with:
+    host: ${{ secrets.DEPLOY_SERVER_IP }}
+    username: ${{ secrets.DEPLOY_SERVER_USER }}
+    key: ${{ secrets.DEPLOY_SERVER_SSH_KEY }}
+    script: |
+      cd ~/Minecraft-Server-Website   # match your repo name
+      git pull origin main
+      chmod +x start.sh
+      ./start.sh
