--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     build: .
     container_name: my-node-app
     ports:
-      - "443:443"
+      - "883:883"
     volumes:
       - ./downloads:/usr/src/app/downloads
     environment:
-      DATABASE_URL: postgres://postgres:supersecret@db:5432/Minecraft-Server-Website_db
+      DATABASE_URL: postgres://postgres:supersecret@db:5432/app_db
     depends_on:
       - db
 
@@ -22,6 +22,7 @@ services:
       POSTGRES_DB: app_db
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./db-init:/docker-entrypoint-initdb.d  # <-- Mount init scripts here
     ports:
       - "5432:5432"
 
