--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-rate-limit": "^8.1.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "pg": "^8.16.3"
   },
   "repository": {
     "type": "git",
