--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,16 @@
-node_modules
+# Ignore local downloads
+downloads/
+downloads/*
+
+# Node junk
+node_modules/
 npm-debug.log
+yarn-error.log
+
+# OS junk
+.DS_Store
+Thumbs.db
+
+# Git
 .git
+.gitignore
