--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,31 +5,42 @@ services:
     build: .
     container_name: my-node-app
     ports:
-      - "883:883"
+      - "443:443"      # HTTPS
+      - "80:80"        # optional HTTP for redirect or cert renewal
     volumes:
-      - ./downloads:/usr/src/app/downloads   # Host <-> container sync
+      - ./downloads:/usr/src/app/downloads
+      - ./public:/usr/src/app/public
+      - ./routes:/usr/src/app/routes
+      - ./controllers:/usr/src/app/controllers
+      - ./config:/usr/src/app/config
+      # Mount Let’s Encrypt certificates
+      - ./certs/fullchain.pem:/certs/fullchain.pem:ro
+      - ./certs/privkey.pem:/certs/privkey.pem:ro
     environment:
-      DATABASE_URL: postgres://postgres:supersecret@db:5432/app_db
-    user: "${MY_UID}:${MY_GID}"             # Run container as host user
+      - NODE_ENV=production
+      - DATABASE_URL=postgres://postgres:supersecret@db:5432/app_db
+    user: "${MY_UID}:${MY_GID}"
     depends_on:
       - db
+
   scan:
-      build: .
-      container_name: my-file-scanner
-      volumes:
-        - ./downloads:/usr/src/app/downloads
-      command: node scanFiles.js
-      environment:
-        DATABASE_URL: postgres://postgres:supersecret@db:5432/app_db
-      depends_on:
-        - db
+    build: .
+    container_name: my-file-scanner
+    volumes:
+      - ./downloads:/usr/src/app/downloads
+    command: node scanFiles.js
+    environment:
+      - DATABASE_URL=postgres://postgres:supersecret@db:5432/app_db
+    depends_on:
+      - db
+
   db:
     image: postgres:15
     container_name: Minecraft-Server-Website-db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: supersecret
-      POSTGRES_DB: app_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=supersecret
+      - POSTGRES_DB=app_db
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./db-init:/docker-entrypoint-initdb.d
